Bug 438567 - Drag pixmap highlight sometimes does not match original text
Summary: Drag pixmap highlight sometimes does not match original text
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-13 18:32 UTC by Kai Uwe Broulik
Modified: 2022-01-14 19:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Wrong color drag pixmap (34.45 KB, image/png)
2021-06-13 18:32 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-06-13 18:32:49 UTC
Created attachment 139293 [details]
Wrong color drag pixmap

SUMMARY
Sometimes when selecting text and dragging it out, the syntax highlighting in the resulting drag pixmap does not match the original text

STEPS TO REPRODUCE
1. Select some text, looks like in cpp code with "#include foo", selecting the entire line

OBSERVED RESULT
Pixmap is all yellow

EXPECTED RESULT
Pixmap looks like the original tex

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2021-06-13
Qt Version: 5.15.3
Comment 1 Waqar Ahmed 2021-06-13 18:50:34 UTC
Is that breeze light theme? Maybe the renderer thinks that the text is an occurrence...?
Comment 2 Kai Uwe Broulik 2021-06-13 19:11:56 UTC
Yes. I've also managed to reproduce with other texts with no obvious pattern though
Comment 3 Bug Janitor Service 2022-01-12 17:35:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/251
Comment 4 Christoph Cullmann 2022-01-14 19:44:11 UTC
Git commit 3be086c24ea5b3853b46b6c65af1a8c694186c1f by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 14/01/2022 at 19:33.
Pushed by cullmann into branch 'master'.

Fix drag pixmap highlight sometimes does not match original text

M  +12   -0    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/3be086c24ea5b3853b46b6c65af1a8c694186c1f