Fix drag pixmap highlight sometimes does not match original text

BUG: 438567